traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:6: error: not found: value Direction
      if (getDirection()==Direction.EST)
                          ^TraversalZigZag:52: error: not found: value Direction
      if(estFaceMur() && getDirection()==Direction.EST)
                                         ^TraversalZigZag:58: error: not found: value Direction
      else if(estFaceMur() && getDirection()==Direction.OUEST)
                                              ^TraversalZigZag:72: error: not found: value Dorection
  setDirection(Dorection.NORD)
               ^